[workspace]
resolver = "3"
members = ["sat-core", "sat-python"]

[workspace.dependencies]
color-eyre = "0.6.5"
futures = "0.3.32"
iso8601-duration = "0.2.0"
itertools = "0.14.0"
ndarray = "0.17.2"
numpy = "0.28.0"
pin-project-lite = "0.2.16"
pyo3 = { version = "0.28.2", features = ["eyre"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
rand = "0.10.0"
rand_chacha = "0.10.0"
rand_pcg = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = [
    "json",
    "native-tls-vendored",
    "cookies",
    "brotli",
    "deflate",
    "gzip",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
sat-core = { path = "sat-core" }
