[package]
name = "sat-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "sat_python"
crate-type = ["rlib", "cdylib"]

[dependencies]
sat-core.workspace = true
color-eyre.workspace = true
futures.workspace = true
iso8601-duration.workspace = true
itertools.workspace = true
ndarray.workspace = true
numpy.workspace = true
pin-project-lite.workspace = true
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_pcg.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
